<resources>
    <string name="app_name">星梦缘</string>
    <string name="label_star">星座</string>
    <string name="label_partner">配对</string>
    <string name="label_luck">运势</string>
    <string name="label_me">我的</string>
    <string name="man">男生 : </string>
    <string name="woman">女生 : </string>
    <string name="partner">分别选您的星座和对方的星座，点击配对分析即可。</string>
    <string name="partner_btn_prize">每日抽奖</string>
    <string name="partner_gtn_analysis">开始配对分析</string>
    <string name="app_about">关于应用</string>
    <string name="app_features">功能介绍</string>
    <string name="app_updateLog">更新日志</string>
    <string name="app_reportError">反馈问题</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>