<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/main_tv_title"
        android:text="@string/app_name"
        android:background="@color/lightyellow"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/lightpink"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/main_rg"
        android:orientation="horizontal"
        android:background="@color/lightyellow"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        >
        <RadioButton
            style="@style/main_rb"
            android:id="@+id/main_rb_star"
            android:drawableTop="@drawable/main_rb_star"
            android:checked="true"
            android:text="@string/label_star"
            />
        <RadioButton
            style="@style/main_rb"
            android:id="@+id/main_rb_partner"
            android:drawableTop="@drawable/main_rb_partner"
            android:text="@string/label_partner"
            />
        <RadioButton
            style="@style/main_rb"
            android:id="@+id/main_rb_luck"
            android:drawableTop="@drawable/main_rb_luck"
            android:text="@string/label_luck"
            />
        <RadioButton
            style="@style/main_rb"
            android:id="@+id/main_rb_me"
            android:drawableTop="@drawable/main_rb_me"
            android:text="@string/label_me"
            />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_layout_center"
        android:orientation="vertical"
        android:layout_below="@id/main_tv_title"
        android:layout_above="@id/main_rg"
        />
</RelativeLayout>