<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mefrag.MeFragment"
    android:background="@color/bgyellow"
    android:orientation="vertical">

   <de.hdodenhof.circleimageview.CircleImageView
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:id="@+id/mefrag_iv"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="20dp"
       app:civ_border_width="2dp"
       app:civ_border_color="@color/grey"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="白羊座"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/me_name_tv"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="4dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:background="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mefrag_about"
            android:text="@string/app_about"
            android:textSize="20sp"
            android:gravity="center|left"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="4dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:background="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mefrag_features"
            android:text="@string/app_features"
            android:textSize="20sp"
            android:gravity="center|left"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="4dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:background="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mefrag_updateLog"
            android:text="@string/app_updateLog"
            android:textSize="20sp"
            android:gravity="center|left"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="4dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:background="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mefrag_reportError"
            android:text="@string/app_reportError"
            android:textSize="20sp"
            android:gravity="center|left"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

</LinearLayout>